@@ -281,10 +281,6 @@ PKG_CHECK_MODULES(NICE, nice >= 0.0.11)
 AC_SUBST(NICE_CFLAGS)
 AC_SUBST(NICE_LIBS)
 
-PKG_CHECK_MODULES([UUID], [uuid])
-AC_SUBST([UUID_CFLAGS])
-AC_SUBST([UUID_LIBS])
-
 dnl Check for MCE, a Maemo service used by Gabble to determine when the device
 dnl is idle.
 PKG_CHECK_MODULES([MCE], mce >= 1.5, [HAVE_MCE=yes], [HAVE_MCE=no])
